fix: we removed the dependency on an external source and fixed the horizontal overflow

--- a/Front/src/styles/global.css
+++ b/Front/src/styles/global.css
@@ -17,6 +17,7 @@ body {
     background-color: var(--bg-page);
     color: var(--text);
     max-width: 100vw;
+    overflow-x: hidden;
 }
 
 button, input, textarea{
